--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/96270d5280.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="flex flex-col justify-center items-center w-[375px] bg-veryDarkBlue min-h-screen">
 
 
 </body>
