--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 
 <body class="flex flex-col justify-center items-center w-[375px] bg-veryDarkBlue min-h-screen">
 
+    <main class="">
+        <div>
+            <div>
+                <img src="./src/img/image-jeremy.png" alt="">
+            </div>
+
+        </div>
+    </main>
+
 
 </body>
 
