creating lower page

--- a/index.html
+++ b/index.html
@@ -19,8 +19,18 @@
             <div>
                 <img src="./src/img/image-jeremy.png" alt="">
             </div>
-
+            <div>
+                <p>Report for</p>
+                <p>Jeremy Robson</p>
+            </div>
+            
         </div>
+        <div>
+            <button>Daily</button>
+            <button>Weekly</button>
+            <button>Monthly</button>
+        </div>
+        
     </main>
 
 
