adjusting size of img

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <script src="https://kit.fontawesome.com/96270d5280.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="flex flex-col justify-center items-center w-[375px] bg-veryDarkBlue min-h-screen">
+<body class="flex flex-col justify-center items-center bg-veryDarkBlue min-h-screen text-lg">
 
-    <main class="">
-        <div>
-            <div>
-                <img src="./src/img/image-jeremy.png" alt="">
+    <main class="w-[375px]">
+        <div class="flex items-center p-6  bg-darkBlue rounded-xl text-white">
+            <div class="w-2/6">
+                <img class="" src="./src/img/image-jeremy.png" alt="">
             </div>
-            <div>
+            <div class="ml-5">
                 <p>Report for</p>
                 <p>Jeremy Robson</p>
             </div>
