--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <body class="flex flex-col justify-center items-center bg-veryDarkBlue min-h-screen text-lg">
 
     <main class="w-[375px]">
-        <div class="bg-darkBlue">
+        <div class="bg-darkBlue font-light">
             <div class="flex items-center p-6  bg-Blue rounded-xl text-white">
-                <div class="w-2/6">
-                    <img class="" src="./src/img/image-jeremy.png" alt="">
+                <div class="w-2/6 border-solid border-4 rounded-full">
+                    <img src="./src/img/image-jeremy.png" alt="">
                 </div>
-                <div class="ml-5">
+                <div class="ml-6">
                     <p>Report for</p>
                     <p>Jeremy Robson</p>
                 </div>
