--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <img src="./src/img/image-jeremy.png" alt="">
                 </div>
                 <div class="ml-6">
-                    <p>Report for</p>
-                    <p>Jeremy Robson</p>
+                    <p class="text-paleBlue">Report for</p>
+                    <p class="text-white text-2xl">Jeremy Robson</p>
                 </div>
                 
             </div>
