--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="flex flex-col justify-center items-center bg-veryDarkBlue min-h-screen text-lg">
 
     <main class="w-[375px]">
-        <div class="bg-darkBlue font-light">
+        <div class="bg-darkBlue font-light rounded-xl ">
             <div class="flex items-center p-6  bg-Blue rounded-xl text-white">
                 <div class="w-2/6 border-solid border-4 rounded-full">
                     <img src="./src/img/image-jeremy.png" alt="">
@@ -26,7 +26,7 @@
                 </div>
                 
             </div>
-            <div class="bg-">
+            <div class="flex justify-between p-6">
                 <button>Daily</button>
                 <button>Weekly</button>
                 <button>Monthly</button>
