finish first card

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 </div>
                 
             </div>
-            <div class="flex justify-between p-6">
-                <button>Daily</button>
-                <button>Weekly</button>
-                <button>Monthly</button>
+            <div class="flex justify-between p-6 text-desaturatedBlue">
+                <button class="hover:text-white transition-colors">Daily</button>
+                <button class="hover:text-white transition-colors">Weekly</button>
+                <button class="hover:text-white transition-colors">Monthly</button>
             </div>
         </div>
         
