creating work card

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
                 <button class="hover:text-white transition-colors">Monthly</button>
             </div>
         </div>
+
+        <div>
+            <div>
+                <img src="./src/img/icon-work.svg" alt="">
+            </div>
+        </div>
         
     </main>
 
