creating structure card

--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
             <div>
                 <img src="./src/img/icon-work.svg" alt="">
             </div>
+            <div>
+                <div>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div>
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
         </div>
         
     </main>
