adding text to card

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
             </div>
             <div>
                 <div>
-                    <p></p>
-                    <p></p>
+                    <p>Work</p>
+                    <p>32hrs</p>
                 </div>
                 <div>
-                    <p></p>
-                    <p></p>
+                    <p><i class="fa-solid fa-ellipsis"></i></p>
+                    <p>Last Week - 36hrs</p>
                 </div>
             </div>
         </div>
