adding space to main

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="flex flex-col justify-center items-center bg-veryDarkBlue min-h-screen text-lg">
 
-    <main class="w-[375px]">
+    <main class="w-[375px] space-y-6">
         <div class="bg-darkBlue font-light rounded-xl ">
             <div class="flex items-center p-6  bg-Blue rounded-xl text-white">
                 <div class="w-2/6 border-solid border-4 rounded-full">
@@ -33,7 +33,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="bg-lightOrange">
             <div>
                 <img src="./src/img/icon-work.svg" alt="">
             </div>
