adding absolute postion

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             </div>
         </div>
 
-        <div class="bg-lightOrange">
-            <div>
-                <img src="./src/img/icon-work.svg" alt="">
+        <div class="relative bg-lightOrange rounded-xl">
+            <div class="relative p-5">
+                <img class="absolute -top-2 right-5" src="./src/img/icon-work.svg" alt="">
             </div>
             <div>
                 <div>
