adding overflow hidden

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         </div>
 
         <div class="relative bg-lightOrange rounded-xl">
-            <div class="relative p-5">
-                <img class="absolute -top-2 right-5" src="./src/img/icon-work.svg" alt="">
+            <div class="relative p-5 overflow-hidden">
+                <img class="absolute -top-2 right-5 " src="./src/img/icon-work.svg" alt="">
             </div>
             <div>
                 <div>
