--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="relative p-5 overflow-hidden">
                 <img class="absolute -top-2 right-5 " src="./src/img/icon-work.svg" alt="">
             </div>
-            <div>
+            <div class="flex justify-between">
                 <div>
                     <p>Work</p>
                     <p>32hrs</p>
