--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
             </div>
         </div>
 
-        <div class="relative bg-lightOrange rounded-xl">
+        <div class="relative bg-lightOrange rounded-xl text-white">
             <div class="relative p-5 overflow-hidden">
                 <img class="absolute -top-2 right-5 " src="./src/img/icon-work.svg" alt="">
             </div>
-            <div class="flex justify-between">
+            <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
                 <div>
-                    <p>Work</p>
-                    <p>32hrs</p>
+                    <p class="mb-1">Work</p>
+                    <p class="text-4xl">32hrs</p>
                 </div>
-                <div>
-                    <p><i class="fa-solid fa-ellipsis"></i></p>
+                <div class="text-right">
+                    <button><i class="fa-solid fa-ellipsis"></i></button>
                     <p>Last Week - 36hrs</p>
                 </div>
             </div>
