--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <p class="mb-1">Work</p>
                     <p class="text-4xl">32hrs</p>
                 </div>
-                <div class="text-right">
+                <div class="text-right text-paleBlue">
                     <button><i class="fa-solid fa-ellipsis"></i></button>
                     <p>Last Week - 36hrs</p>
                 </div>
