--- a/index.html
+++ b/index.html
@@ -48,6 +48,81 @@
                 </div>
             </div>
         </div>
+        <div class="relative bg-lightOrange rounded-xl text-white">
+            <div class="relative p-5 overflow-hidden">
+                <img class="absolute -top-2 right-5 " src="./src/img/icon-work.svg" alt="">
+            </div>
+            <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
+                <div>
+                    <p class="mb-1">Work</p>
+                    <p class="text-4xl">32hrs</p>
+                </div>
+                <div class="text-right text-paleBlue">
+                    <button><i class="fa-solid fa-ellipsis"></i></button>
+                    <p>Last Week - 36hrs</p>
+                </div>
+            </div>
+        </div>
+        <div class="relative bg-lightOrange rounded-xl text-white">
+            <div class="relative p-5 overflow-hidden">
+                <img class="absolute -top-2 right-5 " src="./src/img/icon-work.svg" alt="">
+            </div>
+            <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
+                <div>
+                    <p class="mb-1">Work</p>
+                    <p class="text-4xl">32hrs</p>
+                </div>
+                <div class="text-right text-paleBlue">
+                    <button><i class="fa-solid fa-ellipsis"></i></button>
+                    <p>Last Week - 36hrs</p>
+                </div>
+            </div>
+        </div>
+        <div class="relative bg-lightOrange rounded-xl text-white">
+            <div class="relative p-5 overflow-hidden">
+                <img class="absolute -top-2 right-5 " src="./src/img/icon-work.svg" alt="">
+            </div>
+            <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
+                <div>
+                    <p class="mb-1">Work</p>
+                    <p class="text-4xl">32hrs</p>
+                </div>
+                <div class="text-right text-paleBlue">
+                    <button><i class="fa-solid fa-ellipsis"></i></button>
+                    <p>Last Week - 36hrs</p>
+                </div>
+            </div>
+        </div>
+        <div class="relative bg-lightOrange rounded-xl text-white">
+            <div class="relative p-5 overflow-hidden">
+                <img class="absolute -top-2 right-5 " src="./src/img/icon-work.svg" alt="">
+            </div>
+            <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
+                <div>
+                    <p class="mb-1">Work</p>
+                    <p class="text-4xl">32hrs</p>
+                </div>
+                <div class="text-right text-paleBlue">
+                    <button><i class="fa-solid fa-ellipsis"></i></button>
+                    <p>Last Week - 36hrs</p>
+                </div>
+            </div>
+        </div>
+        <div class="relative bg-lightOrange rounded-xl text-white">
+            <div class="relative p-5 overflow-hidden">
+                <img class="absolute -top-2 right-5 " src="./src/img/icon-work.svg" alt="">
+            </div>
+            <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
+                <div>
+                    <p class="mb-1">Work</p>
+                    <p class="text-4xl">32hrs</p>
+                </div>
+                <div class="text-right text-paleBlue">
+                    <button><i class="fa-solid fa-ellipsis"></i></button>
+                    <p>Last Week - 36hrs</p>
+                </div>
+            </div>
+        </div>
         
     </main>
 
