changing imgs of other cards

--- a/index.html
+++ b/index.html
@@ -48,33 +48,33 @@
                 </div>
             </div>
         </div>
-        <div class="relative bg-lightOrange rounded-xl text-white">
+        <div class="relative bg-softBlue rounded-xl text-white">
             <div class="relative p-5 overflow-hidden">
-                <img class="absolute -top-2 right-5 " src="./src/img/icon-work.svg" alt="">
+                <img class="absolute -top-2 right-5 " src="./src/img/icon-play.svg" alt="">
             </div>
             <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
                 <div>
-                    <p class="mb-1">Work</p>
-                    <p class="text-4xl">32hrs</p>
+                    <p class="mb-1">Play</p>
+                    <p class="text-4xl">10hrs</p>
                 </div>
                 <div class="text-right text-paleBlue">
                     <button><i class="fa-solid fa-ellipsis"></i></button>
-                    <p>Last Week - 36hrs</p>
+                    <p>Last Week - 8hrs</p>
                 </div>
             </div>
         </div>
-        <div class="relative bg-lightOrange rounded-xl text-white">
+        <div class="relative bg-lightRed rounded-xl text-white">
             <div class="relative p-5 overflow-hidden">
-                <img class="absolute -top-2 right-5 " src="./src/img/icon-work.svg" alt="">
+                <img class="absolute -top-2 right-5 " src="./src/img/icon-study.svg" alt="">
             </div>
             <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
                 <div>
-                    <p class="mb-1">Work</p>
-                    <p class="text-4xl">32hrs</p>
+                    <p class="mb-1">Study</p>
+                    <p class="text-4xl">4hrs</p>
                 </div>
                 <div class="text-right text-paleBlue">
                     <button><i class="fa-solid fa-ellipsis"></i></button>
-                    <p>Last Week - 36hrs</p>
+                    <p>Last Week - 7hrs</p>
                 </div>
             </div>
         </div>
