--- a/index.html
+++ b/index.html
@@ -78,48 +78,48 @@
                 </div>
             </div>
         </div>
-        <div class="relative bg-lightOrange rounded-xl text-white">
+        <div class="relative bg-limeGreen rounded-xl text-white">
             <div class="relative p-5 overflow-hidden">
-                <img class="absolute -top-2 right-5 " src="./src/img/icon-work.svg" alt="">
+                <img class="absolute -top-2 right-5 " src="./src/img/icon-exercise.svg" alt="">
             </div>
             <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
                 <div>
-                    <p class="mb-1">Work</p>
-                    <p class="text-4xl">32hrs</p>
+                    <p class="mb-1">Exercise</p>
+                    <p class="text-4xl">4hrs</p>
                 </div>
                 <div class="text-right text-paleBlue">
                     <button><i class="fa-solid fa-ellipsis"></i></button>
-                    <p>Last Week - 36hrs</p>
+                    <p>Last Week - 5hrs</p>
                 </div>
             </div>
         </div>
-        <div class="relative bg-lightOrange rounded-xl text-white">
+        <div class="relative bg-violet rounded-xl text-white">
             <div class="relative p-5 overflow-hidden">
-                <img class="absolute -top-2 right-5 " src="./src/img/icon-work.svg" alt="">
+                <img class="absolute -top-2 right-5 " src="./src/img/icon-social.svg" alt="">
             </div>
             <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
                 <div>
-                    <p class="mb-1">Work</p>
-                    <p class="text-4xl">32hrs</p>
+                    <p class="mb-1">Social</p>
+                    <p class="text-4xl">5hrs</p>
                 </div>
                 <div class="text-right text-paleBlue">
                     <button><i class="fa-solid fa-ellipsis"></i></button>
-                    <p>Last Week - 36hrs</p>
+                    <p>Last Week - 10hrs</p>
                 </div>
             </div>
         </div>
-        <div class="relative bg-lightOrange rounded-xl text-white">
+        <div class="relative bg-softOrange rounded-xl text-white">
             <div class="relative p-5 overflow-hidden">
-                <img class="absolute -top-2 right-5 " src="./src/img/icon-work.svg" alt="">
+                <img class="absolute -top-2 right-5 " src="./src/img/icon-self-care.svg" alt="">
             </div>
             <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
                 <div>
-                    <p class="mb-1">Work</p>
-                    <p class="text-4xl">32hrs</p>
+                    <p class="mb-1">Self Care</p>
+                    <p class="text-4xl">2hrs</p>
                 </div>
                 <div class="text-right text-paleBlue">
                     <button><i class="fa-solid fa-ellipsis"></i></button>
-                    <p>Last Week - 36hrs</p>
+                    <p>Last Week - 2hrs</p>
                 </div>
             </div>
         </div>
