--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
                 <div>
-                    <p class="mb-1">Work</p>
+                    <p class="mb-1 font-bold">Work</p>
                     <p class="text-4xl">32hrs</p>
                 </div>
                 <div class="text-right text-paleBlue">
@@ -54,7 +54,7 @@
             </div>
             <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
                 <div>
-                    <p class="mb-1">Play</p>
+                    <p class="mb-1 font-bold">Play</p>
                     <p class="text-4xl">10hrs</p>
                 </div>
                 <div class="text-right text-paleBlue">
@@ -69,7 +69,7 @@
             </div>
             <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
                 <div>
-                    <p class="mb-1">Study</p>
+                    <p class="mb-1 font-bold">Study</p>
                     <p class="text-4xl">4hrs</p>
                 </div>
                 <div class="text-right text-paleBlue">
@@ -84,7 +84,7 @@
             </div>
             <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
                 <div>
-                    <p class="mb-1">Exercise</p>
+                    <p class="mb-1 font-bold">Exercise</p>
                     <p class="text-4xl">4hrs</p>
                 </div>
                 <div class="text-right text-paleBlue">
@@ -99,7 +99,7 @@
             </div>
             <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
                 <div>
-                    <p class="mb-1">Social</p>
+                    <p class="mb-1 font-bold">Social</p>
                     <p class="text-4xl">5hrs</p>
                 </div>
                 <div class="text-right text-paleBlue">
@@ -114,7 +114,7 @@
             </div>
             <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
                 <div>
-                    <p class="mb-1">Self Care</p>
+                    <p class="mb-1 font-bold">Self Care</p>
                     <p class="text-4xl">2hrs</p>
                 </div>
                 <div class="text-right text-paleBlue">
