--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="flex flex-col justify-center items-center bg-veryDarkBlue min-h-screen text-lg ">
 
     <main class="w-[375px] space-y-6 lg:grid lg:grid-cols-4 lg:gap-5 lg:w-[1300px]">
-        <div class="bg-darkBlue font-light rounded-xl lg:flex lg:flex-col">
+        <div class="bg-darkBlue font-light rounded-xl lg:row-span-2 ">
             <div class="flex items-center p-6  bg-Blue rounded-xl text-white">
                 <div class="w-2/6 border-solid border-4 rounded-full">
                     <img src="./src/img/image-jeremy.png" alt="">
