--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <main class="w-[375px] space-y-6 lg:grid lg:grid-cols-4 lg:gap-5 lg:w-[1300px]">
         <div class="bg-darkBlue font-light rounded-xl lg:row-span-2 ">
-            <div class="flex items-center p-6  bg-Blue rounded-xl text-white">
+            <div class="flex items-center p-6  bg-Blue rounded-xl text-white lg:flex lg:flex-col lg:items-start">
                 <div class="w-2/6 border-solid border-4 rounded-full">
                     <img src="./src/img/image-jeremy.png" alt="">
                 </div>
