--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 
 <body class="flex flex-col justify-center items-center bg-veryDarkBlue min-h-screen text-lg ">
 
-    <main class="w-[375px] space-y-6 lg:grid lg:grid-cols-4 lg:gap-5 lg:w-[1300px]">
-        <div class="bg-darkBlue font-light rounded-xl lg:row-span-2 ">
-            <div class="flex items-center p-6  bg-Blue rounded-xl text-white lg:flex lg:flex-col lg:items-start">
+    <main class="w-[375px] space-y-6 lg:grid lg:grid-cols-4 lg:gap-5 lg:w-[1150px]">
+        <div class="bg-darkBlue font-light rounded-xl lg:row-span-2 lg:w-[250px] ">
+            <div class="flex items-center p-6  bg-Blue rounded-xl text-white lg:flex lg:flex-col lg:items-start ">
                 <div class="w-2/6 border-solid border-4 rounded-full lg:mb-6">
                     <img src="./src/img/image-jeremy.png" alt="">
                 </div>
                 <div class="ml-6 lg:text-left lg:m-0 lg:mb-[50px]">
                     <p class="text-paleBlue">Report for</p>
-                    <p class="text-white text-2xl">Jeremy Robson</p>
+                    <p class="text-white text-2xl lg:text-5xl">Jeremy Robson</p>
                 </div>
 
             </div>
