--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main class="w-[375px] space-y-6 lg:grid lg:grid-cols-4 lg:gap-5 lg:w-[1150px]">
         <div class="bg-darkBlue font-light rounded-xl lg:row-span-2 lg:w-[250px] ">
             <div class="flex items-center p-6  bg-Blue rounded-xl text-white lg:flex lg:flex-col lg:items-start ">
-                <div class="w-2/6 border-solid border-4 rounded-full lg:mb-6 lg:w-[50%]">
+                <div class="w-2/6 border-solid border-4 rounded-full lg:mb-6 lg:w-[60%]">
                     <img src="./src/img/image-jeremy.png" alt="">
                 </div>
                 <div class="ml-6 lg:text-left lg:m-0 lg:mb-[50px]">
@@ -26,7 +26,7 @@
                 </div>
 
             </div>
-            <div class="flex justify-between p-6 text-desaturatedBlue lg:flex-col lg:items-start">
+            <div class="flex justify-between p-6 text-desaturatedBlue lg:flex-col lg:items-start lg:space-y-5">
                 <button class="hover:text-white transition-colors">Daily</button>
                 <button class="hover:text-white transition-colors">Weekly</button>
                 <button class="hover:text-white transition-colors">Monthly</button>
@@ -36,20 +36,20 @@
 
 
 
-
+    
 
 
         <div class="relative bg-lightOrange rounded-xl text-white">
             <div class="relative p-5 overflow-hidden">
                 <img class="absolute -top-2 right-5 " src="./src/img/icon-work.svg" alt="">
             </div>
-            <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
-                <div>
+            <div class="relative  py-6 px-4  bg-darkBlue rounded-xl ">
+                <div class="flex items-center justify-between">
                     <p class="mb-1 font-bold">Work</p>
-                    <p class="text-4xl">32hrs</p>
-                </div>
-                <div class="text-right text-paleBlue">
                     <button><i class="fa-solid fa-ellipsis"></i></button>
+                </div>
+                <div class=" flex justify-between text-paleBlue">
+                    <p>32hrs</p>
                     <p>Last Week - 36hrs</p>
                 </div>
             </div>
