--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
             <div class="relative p-5 overflow-hidden">
                 <img class="absolute -top-2 right-5 " src="./src/img/icon-play.svg" alt="">
             </div>
-            <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
-                <div>
+            <div class="relative  py-6 px-4  bg-darkBlue rounded-xl ">
+                <div class="flex items-center justify-between">
                     <p class="mb-1 font-bold">Play</p>
-                    <p class="text-4xl">10hrs</p>
-                </div>
-                <div class="text-right text-paleBlue">
                     <button><i class="fa-solid fa-ellipsis"></i></button>
+                </div>
+                <div class=" flex justify-between text-paleBlue">
+                    <p>10hrs</p>
                     <p>Last Week - 8hrs</p>
                 </div>
             </div>
@@ -73,13 +73,13 @@
             <div class="relative p-5 overflow-hidden">
                 <img class="absolute -top-2 right-5 " src="./src/img/icon-study.svg" alt="">
             </div>
-            <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
-                <div>
+            <div class="relative  py-6 px-4  bg-darkBlue rounded-xl ">
+                <div class="flex items-center justify-between">
                     <p class="mb-1 font-bold">Study</p>
-                    <p class="text-4xl">4hrs</p>
-                </div>
-                <div class="text-right text-paleBlue">
                     <button><i class="fa-solid fa-ellipsis"></i></button>
+                </div>
+                <div class=" flex justify-between text-paleBlue">
+                    <p>4hrs</p>
                     <p>Last Week - 7hrs</p>
                 </div>
             </div>
@@ -93,13 +93,13 @@
             <div class="relative p-5 overflow-hidden">
                 <img class="absolute -top-2 right-5 " src="./src/img/icon-exercise.svg" alt="">
             </div>
-            <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
-                <div>
+            <div class="relative  py-6 px-4  bg-darkBlue rounded-xl ">
+                <div class="flex items-center justify-between">
                     <p class="mb-1 font-bold">Exercise</p>
-                    <p class="text-4xl">4hrs</p>
-                </div>
-                <div class="text-right text-paleBlue">
                     <button><i class="fa-solid fa-ellipsis"></i></button>
+                </div>
+                <div class=" flex justify-between text-paleBlue">
+                    <p>4hrs</p>
                     <p>Last Week - 5hrs</p>
                 </div>
             </div>
@@ -108,13 +108,13 @@
             <div class="relative p-5 overflow-hidden">
                 <img class="absolute -top-2 right-5 " src="./src/img/icon-social.svg" alt="">
             </div>
-            <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
-                <div>
+            <div class="relative  py-6 px-4  bg-darkBlue rounded-xl ">
+                <div class="flex items-center justify-between">
                     <p class="mb-1 font-bold">Social</p>
-                    <p class="text-4xl">5hrs</p>
-                </div>
-                <div class="text-right text-paleBlue">
                     <button><i class="fa-solid fa-ellipsis"></i></button>
+                </div>
+                <div class=" flex justify-between text-paleBlue">
+                    <p>5hrs</p>
                     <p>Last Week - 10hrs</p>
                 </div>
             </div>
@@ -123,13 +123,13 @@
             <div class="relative p-5 overflow-hidden">
                 <img class="absolute -top-2 right-5 " src="./src/img/icon-self-care.svg" alt="">
             </div>
-            <div class="flex justify-between items-center px-4 py-6 bg-darkBlue rounded-xl ">
-                <div>
+            <div class="relative  py-6 px-4  bg-darkBlue rounded-xl ">
+                <div class="flex items-center justify-between">
                     <p class="mb-1 font-bold">Self Care</p>
-                    <p class="text-4xl">2hrs</p>
-                </div>
-                <div class="text-right text-paleBlue">
                     <button><i class="fa-solid fa-ellipsis"></i></button>
+                </div>
+                <div class=" flex justify-between text-paleBlue">
+                    <p>2hrs</p>
                     <p>Last Week - 2hrs</p>
                 </div>
             </div>
