--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
                     <p class="text-paleBlue">Report for</p>
                     <p class="text-white text-2xl lg:text-5xl">Jeremy Robson</p>
                 </div>
-
             </div>
             <div class="flex justify-between p-6 text-desaturatedBlue lg:flex-col lg:items-start lg:space-y-5">
                 <button class="hover:text-white transition-colors">Daily</button>
@@ -34,21 +33,16 @@
         </div>
 
 
-
-
-    
-
-
         <div class="relative bg-lightOrange rounded-xl text-white">
             <div class="relative p-5 overflow-hidden">
                 <img class="absolute -top-2 right-5 " src="./src/img/icon-work.svg" alt="">
             </div>
-            <div class="relative  py-6 px-4  bg-darkBlue rounded-xl ">
+            <div class="relative  py-6 px-4  bg-darkBlue rounded-xl lg:h-[84%] ">
                 <div class="flex items-center justify-between">
                     <p class="mb-1 font-bold">Work</p>
                     <button><i class="fa-solid fa-ellipsis"></i></button>
                 </div>
-                <div class=" flex justify-between text-paleBlue">
+                <div class=" flex justify-between text-paleBlue lg:flex-col">
                     <p>32hrs</p>
                     <p>Last Week - 36hrs</p>
                 </div>
@@ -85,10 +79,6 @@
             </div>
         </div>
         </div>
-
-
-
-
         <div class="relative bg-limeGreen rounded-xl text-white">
             <div class="relative p-5 overflow-hidden">
                 <img class="absolute -top-2 right-5 " src="./src/img/icon-exercise.svg" alt="">
@@ -134,12 +124,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
-
-
 
     </main>
 
