editing text color

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <button><i class="fa-solid fa-ellipsis"></i></button>
                 </div>
                 <div class=" flex justify-between text-paleBlue lg:flex-col">
-                    <p>32hrs</p>
+                    <p class="text-4xl text-white">32hrs</p>
                     <p>Last Week - 36hrs</p>
                 </div>
             </div>
