fixing mobile version of text

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <button><i class="fa-solid fa-ellipsis"></i></button>
                 </div>
                 <div class=" flex justify-between text-paleBlue">
-                    <p>10hrs</p>
+                    <p class="text-4xl text-white">10hrs</p>
                     <p>Last Week - 8hrs</p>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                     <button><i class="fa-solid fa-ellipsis"></i></button>
                 </div>
                 <div class=" flex justify-between text-paleBlue">
-                    <p>4hrs</p>
+                    <p class="text-4xl text-white">4hrs</p>
                     <p>Last Week - 7hrs</p>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                     <button><i class="fa-solid fa-ellipsis"></i></button>
                 </div>
                 <div class=" flex justify-between text-paleBlue">
-                    <p>4hrs</p>
+                    <p class="text-4xl text-white">4hrs</p>
                     <p>Last Week - 5hrs</p>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                     <button><i class="fa-solid fa-ellipsis"></i></button>
                 </div>
                 <div class=" flex justify-between text-paleBlue">
-                    <p>5hrs</p>
+                    <p class="text-4xl text-white">5hrs</p>
                     <p>Last Week - 10hrs</p>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                     <button><i class="fa-solid fa-ellipsis"></i></button>
                 </div>
                 <div class=" flex justify-between text-paleBlue">
-                    <p>2hrs</p>
+                    <p class="text-4xl text-white">2hrs</p>
                     <p>Last Week - 2hrs</p>
                 </div>
             </div>
