adjusting height of div card

--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
         </div>
 
 
-        <div class="relative bg-lightOrange rounded-xl text-white">
+        <div class="relative bg-lightOrange rounded-xl text-white lg:h-[75%]">
             <div class="relative p-5 overflow-hidden">
                 <img class="absolute -top-2 right-5 " src="./src/img/icon-work.svg" alt="">
             </div>
-            <div class="relative  py-6 px-4  bg-darkBlue rounded-xl lg:h-[87%] ">
+            <div class="relative  py-6 px-4  bg-darkBlue rounded-xl lg:h-full ">
                 <div class="flex items-center justify-between lg:mb-5">
                     <p class="mb-1 font-bold">Work</p>
                     <button><i class="fa-solid fa-ellipsis"></i></button>
                 </div>
                 <div class=" flex justify-between text-paleBlue lg:flex-col">
                     <p class="text-4xl text-white lg:text-6xl lg:mb-4">32hrs</p>
-                    <p>Last Week - 36hrs</p>
+                    <p class="text-base">Last Week - 36hrs</p>
                 </div>
             </div>
         </div>
