--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <button><i class="fa-solid fa-ellipsis"></i></button>
                 </div>
                 <div class=" flex justify-between text-paleBlue lg:flex-col">
-                    <p class="text-4xl text-white lg:text-6xl lg:mb-4">32hrs</p>
+                    <p class="text-4xl text-white lg:text-6xl lg:mb-4 lg:font-light">32hrs</p>
                     <p class="text-base">Last Week - 36hrs</p>
                 </div>
             </div>
