finish styling cards for desktop resolution

--- a/index.html
+++ b/index.html
@@ -48,79 +48,79 @@
                 </div>
             </div>
         </div>
-        <div class="relative bg-softBlue rounded-xl text-white">
+        <div class="relative bg-softBlue rounded-xl text-white lg:h-[75%]">
             <div class="relative p-5 overflow-hidden">
                 <img class="absolute -top-2 right-5 " src="./src/img/icon-play.svg" alt="">
             </div>
-            <div class="relative  py-6 px-4  bg-darkBlue rounded-xl ">
-                <div class="flex items-center justify-between">
-                    <p class="mb-1 font-bold">Play</p>
+            <div class="relative  py-6 px-4  bg-darkBlue rounded-xl lg:h-full ">
+                <div class="flex items-center justify-between lg:mb-5">
+                    <p class="mb-1 font-bold ">Play</p>
                     <button><i class="fa-solid fa-ellipsis"></i></button>
                 </div>
-                <div class=" flex justify-between text-paleBlue">
-                    <p class="text-4xl text-white">10hrs</p>
-                    <p>Last Week - 8hrs</p>
+                <div class=" flex justify-between text-paleBlue lg:flex-col">
+                    <p class="text-4xl text-white  lg:text-6xl lg:mb-4 lg:font-light">10hrs</p>
+                    <p class="text-base">Last Week - 8hrs</p>
                 </div>
             </div>
         </div>
-        <div class="relative bg-lightRed rounded-xl text-white">
+        <div class="relative bg-lightRed rounded-xl text-white lg:h-[75%]">
             <div class="relative p-5 overflow-hidden">
                 <img class="absolute -top-2 right-5 " src="./src/img/icon-study.svg" alt="">
             </div>
-            <div class="relative  py-6 px-4  bg-darkBlue rounded-xl ">
-                <div class="flex items-center justify-between">
+            <div class="relative  py-6 px-4  bg-darkBlue rounded-xl lg:h-full ">
+                <div class="flex items-center justify-between lg:mb-5">
                     <p class="mb-1 font-bold">Study</p>
                     <button><i class="fa-solid fa-ellipsis"></i></button>
                 </div>
-                <div class=" flex justify-between text-paleBlue">
-                    <p class="text-4xl text-white">4hrs</p>
-                    <p>Last Week - 7hrs</p>
+                <div class=" flex justify-between text-paleBlue lg:flex-col">
+                    <p class="text-4xl text-white lg:text-6xl lg:mb-4 lg:font-light">4hrs</p>
+                    <p class="text-base">Last Week - 7hrs</p>
                 </div>
             </div>
         </div>
         </div>
-        <div class="relative bg-limeGreen rounded-xl text-white">
+        <div class="relative bg-limeGreen rounded-xl text-white lg:h-[75%]">
             <div class="relative p-5 overflow-hidden">
                 <img class="absolute -top-2 right-5 " src="./src/img/icon-exercise.svg" alt="">
             </div>
-            <div class="relative  py-6 px-4  bg-darkBlue rounded-xl ">
-                <div class="flex items-center justify-between">
+            <div class="relative  py-6 px-4  bg-darkBlue rounded-xl lg:h-full">
+                <div class="flex items-center justify-between lg:mb-5">
                     <p class="mb-1 font-bold">Exercise</p>
                     <button><i class="fa-solid fa-ellipsis"></i></button>
                 </div>
-                <div class=" flex justify-between text-paleBlue">
-                    <p class="text-4xl text-white">4hrs</p>
-                    <p>Last Week - 5hrs</p>
+                <div class=" flex justify-between text-paleBlue lg:flex-col">
+                    <p class="text-4xl text-white lg:text-6xl lg:mb-4 lg:font-light">4hrs</p>
+                    <p class="text-base">Last Week - 5hrs</p>
                 </div>
             </div>
         </div>
-        <div class="relative bg-violet rounded-xl text-white">
+        <div class="relative bg-violet rounded-xl text-white lg:h-[75%]">
             <div class="relative p-5 overflow-hidden">
                 <img class="absolute -top-2 right-5 " src="./src/img/icon-social.svg" alt="">
             </div>
-            <div class="relative  py-6 px-4  bg-darkBlue rounded-xl ">
-                <div class="flex items-center justify-between">
+            <div class="relative  py-6 px-4  bg-darkBlue rounded-xl lg:h-full ">
+                <div class="flex items-center justify-between lg:mb-5">
                     <p class="mb-1 font-bold">Social</p>
                     <button><i class="fa-solid fa-ellipsis"></i></button>
                 </div>
-                <div class=" flex justify-between text-paleBlue">
-                    <p class="text-4xl text-white">5hrs</p>
-                    <p>Last Week - 10hrs</p>
+                <div class=" flex justify-between text-paleBlue lg:flex-col">
+                    <p class="text-4xl text-white lg:mb-4 lg:font-light">5hrs</p>
+                    <p class="text-base">Last Week - 10hrs</p>
                 </div>
             </div>
         </div>
-        <div class="relative bg-softOrange rounded-xl text-white">
+        <div class="relative bg-softOrange rounded-xl text-white lg:h-[75%]">
             <div class="relative p-5 overflow-hidden">
                 <img class="absolute -top-2 right-5 " src="./src/img/icon-self-care.svg" alt="">
             </div>
-            <div class="relative  py-6 px-4  bg-darkBlue rounded-xl ">
-                <div class="flex items-center justify-between">
+            <div class="relative  py-6 px-4  bg-darkBlue rounded-xl lg:h-full ">
+                <div class="flex items-center justify-between lg:mb-5">
                     <p class="mb-1 font-bold">Self Care</p>
                     <button><i class="fa-solid fa-ellipsis"></i></button>
                 </div>
-                <div class=" flex justify-between text-paleBlue">
-                    <p class="text-4xl text-white">2hrs</p>
-                    <p>Last Week - 2hrs</p>
+                <div class=" flex justify-between text-paleBlue lg:flex-col">
+                    <p class="text-4xl text-white lg:mb-4 lg:font-light">2hrs</p>
+                    <p class="text-base">Last Week - 2hrs</p>
                 </div>
             </div>
         </div>
