--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <script src="https://kit.fontawesome.com/96270d5280.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="flex flex-col justify-center items-center bg-veryDarkBlue min-h-screen text-lg  ">
+<body class="flex flex-col  justify-center items-center bg-veryDarkBlue min-h-screen text-lg  ">
 
-    <main class="w-[375px] space-y-6 lg:grid lg:grid-cols-4 lg:gap-5 lg:w-[1150px]">
+    <main class="w-[375px] p-4 space-y-6 lg:grid lg:grid-cols-4 lg:gap-5 lg:w-[1150px] ">
         <div class="bg-darkBlue font-light rounded-xl lg:row-span-2 lg:w-[250px] lg:mt-6 ">
             <div class="flex items-center p-6  bg-Blue rounded-xl text-white lg:flex lg:flex-col lg:items-start ">
                 <div class="w-2/6 border-solid border-4 rounded-full lg:mb-6 lg:w-[60%]">
